ingress-speaking-clock.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-speaking-clock
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  backend:
    serviceName: default-http-backend
    servicePort: 80
  rules:
  - host: auth.speaking.clock
    http:
      paths:
      - path: /
        backend:
          serviceName: speaking-clock-basic-auth
          servicePort: 5000
